# POSIBLE_SYSTEM

./: CMakeLists.txt  README.md  main.cpp
database/: products.db
documentation/: POSIBLE_SYSTEM_INIT  notes_software.md
resources/styles/: styles.qss
src/controller/: productcontroller.cpp  productcontroller.h
src/model/: dbmanagermodel.cpp  dbmanagermodel.h  productmodel.cpp  productmodel.h  salemodel.cpp  salemodel.h  usermodel.cpp
src/view/: mainwindow.cpp  mainwindow.h  mainwindow.ui  productwindow.cpp  productwindow.h  productwindow.ui
src/widgets/: productitemwidget.cpp  productitemwidget.h  productitemwidget.ui
